tests/baselines/reference/internalAliasClassInsideLocalModuleWithoutExportAccessError.errors.txt
internalAliasClassInsideLocalModuleWithoutExportAccessError.ts(1,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
internalAliasClassInsideLocalModuleWithoutExportAccessError.ts(9,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
internalAliasClassInsideLocalModuleWithoutExportAccessError.ts(10,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
internalAliasClassInsideLocalModuleWithoutExportAccessError.ts(17,26): error TS2339: Property 'c' does not exist on type 'typeof m3'.


==== internalAliasClassInsideLocalModuleWithoutExportAccessError.ts (4 errors) ====
    export module x {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class c {
            foo(a: number) {
                return a;
            }
        }
    }
    
    export module m2 {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export module m3 {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            import c = x.c;
            export var cProp = new c();
            var cReturnVal = cProp.foo(10);
        }
    }
    
    export var d = new m2.m3.c();
                             ~
!!! error TS2339: Property 'c' does not exist on type 'typeof m3'.